redhatframework-app/main/default/objects/Field_Map_Entry__mdt/Field_Map_Entry__mdt.object-meta.xml
<CustomObject>
    <description>This is a field mapping to use when copying fields</description>
    <label>Field Map Entry</label>
    <pluralLabel>Field Map Entries</pluralLabel>
</CustomObject>