redhatframework-app/main/default/objects/Field_Map_Entry__mdt/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <description>Default Value for the field</description>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>