redhatframework-app/main/default/objects/Field_Map_Entry__mdt/fields/Destination_Entity__c.field-meta.xml
<CustomField>
    <fullName>Destination_Entity__c</fullName>
    <label>Destination Entity</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>APTS_Order_Creator_Fields1</relationshipLabel>
    <relationshipName>APTS_Order_Creator_Fields1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>