redhatframework-app/main/default/objects/Field_Map_Entry__mdt/fields/Destination_Field__c.field-meta.xml
<CustomField>
    <fullName>Destination_Field__c</fullName>
    <label>Destination Field</label>
    <metadataRelationshipControllingField>Field_Map_Entry__mdt.Destination_Entity__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>APTS_Order_Creator_Fields1</relationshipLabel>
    <relationshipName>APTS_Order_Creator_Fields1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>