redhatframework-app/main/default/objects/Field_Map_Entry__mdt/fields/Map_Name__c.field-meta.xml
<CustomField>
    <fullName>Map_Name__c</fullName>
    <description>This is the name of the map.</description>
    <label>Map Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APTS Asset Queue</fullName>
            </value>
            <value>
                <fullName>APTS Order Creator</fullName>
                <default>true</default>
                <label>APTS Order Creator</label>
            </value>
            <value>
                <fullName>Test_Map</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>