redhatframework-app/main/default/objects/Field_Map_Entry__mdt/fields/Overwritable__c.field-meta.xml
<CustomField>
    <fullName>Overwritable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check to indicate this will overwrite a non-null field value</description>
    <inlineHelpText>Check to indicate this will overwrite a non-null field value</inlineHelpText>
    <label>Overwritable</label>
    <type>Checkbox</type>
</CustomField>