redhatframework-app/main/default/objects/Field_Map_Entry__mdt/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <label>Sequence Number</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>