redhatframework-app/main/default/objects/Field_Map_Entry__mdt/fields/Source_Entity__c.field-meta.xml
<CustomField>
    <fullName>Source_Entity__c</fullName>
    <label>Source Entity</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>APTS_Order_Creator_Fields</relationshipLabel>
    <relationshipName>APTS_Order_Creator_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>