redhatframework-app/main/default/objects/Field_Map_Entry__mdt/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <label>Source Field</label>
    <metadataRelationshipControllingField>Field_Map_Entry__mdt.Source_Entity__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>APTS_Order_Creator_Fields</relationshipLabel>
    <relationshipName>APTS_Order_Creator_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>