redhatframework-app/main/default/objects/Field_Map_Entry__mdt/listViews/APTS_Order_Creator.listView-meta.xml
<ListView>
    <fullName>APTS_Order_Creator</fullName>
    <columns>Sequence_Number__c</columns>
    <columns>MasterLabel</columns>
    <columns>Destination_Entity__c</columns>
    <columns>Destination_Field__c</columns>
    <columns>Source_Entity__c</columns>
    <columns>Source_Field__c</columns>
    <columns>Default_Value__c</columns>
    <columns>Overwritable__c</columns>
    <columns>Nullable__c</columns>
    <columns>Required__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Map_Name__c</field>
        <operation>equals</operation>
        <value>APTS Order Creator</value>
    </filters>
    <label>APTS Order Creator</label>
    <language>en_US</language>
</ListView>